@@ -188,7 +188,19 @@ tree | tail -n 14 | head -n 12
 
 The last command renamed the soundfiles in the `s2` folder, adding the prefix `s2` as in the previous example, and the suffix `1`-`3`. On most operating systems it is impossible to create two files with the same name, so sometimes it can be useful to add some kind of index at the end of the files.
 
-For now `phonfieldwork` works only with `.wav(e)` and `.mp3` files and several video formats (`.mp4`, `.avi` and `.mov`).
+Sometimes it is useful to get information about sound duration:
+
+```{r}
+get_sound_duration("s1/s1_tap.wav")
+```
+
+It is also possible to analyze the whole folder:
+
+```{r}
+get_sound_duration(sounds_from_folder = "s2/")
+```
+
+For now `phonfieldwork` works only with `.wav(e)` and `.mp3` sound files and several video formats (`.mp4`, `.avi` and `.mov`).
 
 ## Merge all data together
 
