@@ -3252,8 +3252,8 @@ summary {
 <h1></h1>
 <div id="data" class="section level2">
 <h2>data</h2>
-<div id="htmlwidget-d2565cb21637c9278d76" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-d2565cb21637c9278d76">{"x":{"filter":"top","filterHTML":"<tr>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["tap <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/1_s1_æ.png\", \"tap\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/1_s1_æ.wav\")'> &#x1f442;<a>","tip <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/2_s1_ı.png\", \"tip\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/2_s1_ı.wav\")'> &#x1f442;<a>","top <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/3_s1_ɒ.png\", \"top\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/3_s1_ɒ.wav\")'> &#x1f442;<a>"],["æ","ı","ɒ"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>labels<\/th>\n      <th>X2<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":50,"dom":"tip","order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-e066477f2babc38cd8c2" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-e066477f2babc38cd8c2">{"x":{"filter":"top","filterHTML":"<tr>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n  <td data-type=\"character\" style=\"vertical-align: top;\">\n    <div class=\"form-group has-feedback\" style=\"margin-bottom: auto;\">\n      <input type=\"search\" placeholder=\"All\" class=\"form-control\" style=\"width: 100%;\"/>\n      <span class=\"glyphicon glyphicon-remove-circle form-control-feedback\"><\/span>\n    <\/div>\n  <\/td>\n<\/tr>","data":[["tap <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/1_s1_æ.png\", \"tap\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/1_s1_æ.wav\")'> &#x1f442;<a>","tip <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/2_s1_ı.png\", \"tip\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/2_s1_ı.wav\")'> &#x1f442;<a>","top <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'pic_appear(\"s1_pics/3_s1_ɒ.png\", \"top\")'> &#x1f441;<a> <a onmouseover=\"resize(this, '200%')\" onmouseout=\"resize(this, '100%')\" onclick = 'sound_play(\"s1_sounds/3_s1_ɒ.wav\")'> &#x1f442;<a>"],["æ","ı","ɒ"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>labels<\/th>\n      <th>X2<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":50,"dom":"tip","order":[],"autoWidth":false,"orderClasses":false,"orderCellsTop":true}},"evals":[],"jsHooks":[]}</script>
 <div id="my_block" class="my_block" onclick="pic_disappear()">
 <span class="close">×</span> <img class="my_img" id="my_img">
 <div id="caption" class="caption">
